# auto-krr

./: .dockerignore  .gitignore  AGENTS.md  Containerfile  README.md  devenv.nix  devenv.yaml  main.py  pyproject.toml
.github/workflows/: build-sign.yml
examples/: helmrelease-auto-krr.yaml
src/auto_krr/: __init__.py  cli.py  comment_targets.py  env.py  forgejo.py  git_utils.py  hr.py  krr.py  patching.py  resources_matchers.py  types.py  yaml_utils.py
tests/: conftest.py  test_cli.py  test_cli_git_failures.py  test_cli_helpers.py  test_cli_main.py  test_cli_pr_selection.py  test_comment_targets.py  test_env.py  test_forgejo.py  test_git_utils_email.py  test_git_utils_extra.py  test_helm_values_resources.py  test_krr_hr_git_utils.py  test_patching.py  test_resources_matchers.py
tests/fixtures/manifests/: helmrelease_app_template_missing_containers.yaml  helmrelease_app_template_resources_missing.yaml  helmrelease_comment_above_resources.yaml  helmrelease_comment_prev_key.yaml  helmrelease_comment_trailing.yaml  helmrelease_custom_chart_missing_resources.yaml  helmrelease_gatus_init_container.yaml  helmrelease_qbittorrent_multi_containers.yaml  helmrelease_trivy_operator_comments.yaml
